[gd_scene load_steps=4 format=3 uid="uid://c3ijtxnwtghp"]

[ext_resource type="Script" uid="uid://qte757dh6tta" path="res://Scripts/main.gd" id="1_cgmvo"]
[ext_resource type="PackedScene" uid="uid://dmuvapf4fm582" path="res://Scenes/main_screen.tscn" id="2_cgmvo"]
[ext_resource type="PackedScene" uid="uid://unuj7o6vr4ws" path="res://Scenes/initial_settings.tscn" id="2_vh8u0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cgmvo")

[node name="Initial_settings" parent="." instance=ExtResource("2_vh8u0")]
layout_mode = 1

[node name="TabContainer" parent="." instance=ExtResource("2_cgmvo")]
visible = false
layout_mode = 1

[connection signal="connect" from="Initial_settings" to="." method="_on_initial_settings_connect"]
